--- a/website_4cs/www/index.html
+++ b/website_4cs/www/index.html
@@ -46,7 +46,7 @@
             <header class="section-header">
                 <h3>About Us</h3>
                 <p>We are a start-up firm of Software Products & Information Technology (IT) services, aiming to help
-                    MSMEs (Micro, Small and Medium Enterprises) and Education sector. We work hard to streamline &
+                    MSME (Micro, Small and Medium Enterprises) and Education sector. We work hard to streamline &
                     optimize their processes and operations with the help of customized open-source technologies to
                     increase their productivity and business by manifold.</p>
             </header>
@@ -60,9 +60,9 @@
                             <div class="icon"><i class="ion-arrow-graph-up-right"></i></div>
                         </div>
                         <h2 class="title">Our Mission</h2>
-                        <p> To provide the most comprehensive, high performance, high quality, cost effective, easy to use ERP solution and 
-                            business support services for our customers. Our solutions enable & empower our customers to focus on their 
-                            business's core competencies in order to achieve 80% of the results with 20% efforts.</p>
+                        <p> To provide the most comprehensive, high performance, high quality, cost effective, easy to use ERP solutions and 
+                            business support services to our customers. Our solutions enable & empower our customers to focus on their 
+                            core competencies by reducing thier efforts in accordance to the Pareto Principle(80/20 rule).</p>
                     </div>
                 </div>
 
@@ -74,7 +74,7 @@
                         </div>
                         <h2 class="title">Our Vision</h2>
                         <p> The <b>MSME</b> (Micro, Small and Medium Enterprises) sector plays a vital role in any country’s socio-economic 
-                            transformation and in meeting the objectives of employment generation and reducing regional imbalances.
+                            transformation and in meeting the objectives of employment generation and reducing urbanization.
                             <b>4C Solutions</b> wants to support MSMEs in becoming high performing organizations and in turn be part of 
                             the transformation they bring.
                         </p>
@@ -94,9 +94,9 @@
 
             <header class="section-header wow fadeInUp">
                 <h3>Services</h3>
-                <p>4C Solutions with its array of customised services in Education, Healthcare and Fleet Management
-                    intends that our customers
-                    concentrate and focus on their buisness's core competencies.</p>
+                <p>
+                    4C Solutions is committed to improve operational performance with open source consulting and implementation services across industries.
+                </p>
             </header>
 
             <div class="row">
@@ -207,7 +207,7 @@
                     <div class="contact-address">
                         <i class="ion-ios-location-outline"></i>
                         <h3>Address</h3>
-                        <address>MIG-22, 1st Phase, Adarsh Nagar, Kalaburagi-585105, Karnataka, India</address>
+                        <address>MIG-22, 1st Phase, Adarsh Nagar <br> Kalaburagi-585105, Karnataka, India</address>
                     </div>
                 </div>
 
