Services: Add ERP for Services Company
Signed-off-by: Syed Mujeer Hashmi <mujeerhashmi@4csolutions.in>

--- a/website_4cs/www/education.html
+++ b/website_4cs/www/education.html
@@ -1,5 +1,5 @@
 {% extends "templates/master.html" %}
-{% block title %}ERP Education{% endblock %}
+{% block title %}ERP for Education{% endblock %}
 
 {% block carousel %}{% endblock %}
 
@@ -40,7 +40,7 @@
         <div class="container">
 
             <header class="section-header">
-                <h3>ERP Education</h3>
+                <h3>ERP for Education</h3>
                 <p>Adopting ERP technology in education system is vital for success.</p>
             </header>
 
