--- a/website_4cs/www/index.html
+++ b/website_4cs/www/index.html
@@ -103,13 +103,13 @@
 
                 <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
                     <div class="icon"><i class="ion-ios-paper-outline"></i></div>
-                    <h4 class="title"><a href="/education.html">ERP Education</a></h4>
+                    <h4 class="title"><a href="/education.html">ERP for Education</a></h4>
                     <p class="description">Student Data, Admission Management, Attendance, Fee Management, Accounting &
                         Payroll etc.</p>
                 </div>
                 <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
                     <div class="icon"><i class="ion-ios-pulse"></i></div>
-                    <h4 class="title"><a href="/healthcare.html">ERP Healthcare</a></h4>
+                    <h4 class="title"><a href="/healthcare.html">ERP for Healthcare</a></h4>
                     <p class="description">Patient Data, Appointments, Lab Tests, Pharmacy, Accounting & Patient Billing
                         etc.</p>
                 </div>
@@ -118,6 +118,16 @@
                     <h4 class="title"><a href="/fleet.html">Fleet Management</a></h4>
                     <p class="description">Live Tracking, Location History, Trip Chart and Summary Reports, Email and
                         SMS Alerts etc.</p>
+                </div>
+
+            </div>
+
+            <div class="row">
+
+                <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
+                    <div class="icon"><i class="ion-android-globe"></i></div>
+                    <h4 class="title"><a href="/services.html">ERP for Services</a></h4>
+                    <p class="description">Project and Task Management, Time Tracking, Project Costing & Billing, Project Reports etc.</p>
                 </div>
 
             </div>
