--- a/website_4cs/www/services.html
+++ b/website_4cs/www/services.html
@@ -1,5 +1,5 @@
 {% extends "templates/master.html" %}
-{% block title %}ERP for Healthcare{% endblock %}
+{% block title %}ERP for Services{% endblock %}
 
 {% block carousel %}{% endblock %}
 
@@ -36,11 +36,11 @@
 
 {% block content %}
 <main id="main">
-    <section id="healthcare">
+    <section id="fleet">
         <div class="container">
 
             <header class="section-header">
-                <h3>ERP for Healthcare</h3>
+                <h3>ERP for Services</h3>
             </header>
 
             <p>Under Construction</p>
