Revert "customer carousel: Add customer carousel from doctype"
This reverts commit 3cb2c9c7f41915909d3cdc3626fe45a473daf397.

--- a/website_4cs/www/index.html
+++ b/website_4cs/www/index.html
@@ -160,7 +160,7 @@
             <div class="owl-carousel clients-carousel">
                 {% if client_images %}
                 {% for client in client_images %}
-                <img src="{{client['customer_logo']}}" alt="">
+                <img src="{{client['image']}}" alt="">
                 {% endfor %}
                 {% endif %}
             </div>
