--- a/website_4cs/www/education.html
+++ b/website_4cs/www/education.html
@@ -4,34 +4,12 @@
 {% block carousel %}{% endblock %}
 
 {% block style_4cs %}
-<link type="text/css" rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700">
-<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/bootstrap.min.css">
-<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/font-awesome.min.css">
-<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/animate.min.css">
-<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/ionicons.min.css">
-<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/owl.carousel.min.css">
-<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/lightbox.min.css">
-<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/style.css">
-<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/custom.css">
+{% include "/templates/includes/css.html" %}
+<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/4cs_style.css">
 {% endblock %}
 
 {% block script_4cs %}
-<script type="text/javascript" src="/assets/website_4cs/js/jquery.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/jquery-migrate.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/bootstrap.bundle.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/easing.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/hoverIntent.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/superfish.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/wow.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/waypoints.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/counterup.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/owl.carousel.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/isotope.pkgd.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/lightbox.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/jquery.touchSwipe.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/contactform.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/main.js"></script>
+{% include "/templates/includes/scripts.html" %}
 {% endblock %}
 
 {% block content %}
@@ -44,54 +22,100 @@
                 <p>Adopting ERP technology in education system is vital for success.</p>
             </header>
 
-            <p>
-                <b>4C Solutions</b> provides innovative and cost effective ERP (Enterprise Resource Planning) services for the education sector, 
-                solving many problems and challenges posed by budgets, the need for collaboration, tools to deal with multiple institutes under 
-                a single management, and accountability. We intend our educational customers to concentrate on their core competency: <b>Teaching</b>.
-                Our comprehensive portfolio of solutions creates significant value for K-12 Schools, Colleges, Universities and other Educational Institutions.
+            <p class="text-center">
+                <b>4C Solutions</b> provides innovative and cost effective ERP (Enterprise Resource Planning) services
+                for the education sector,
+                solving many problems and challenges posed by budgets, the need for collaboration, tools to deal with
+                multiple institutes under
+                a single management and accountability. We intend our educational customers to concentrate on their core
+                competency:
+                <b>Education</b>. Our comprehensive portfolio of solutions creates significant value for K-12 Schools,
+                Colleges, Universities and
+                other Educational Institutions.
             </p>
-            
-            <!--div class="row my-5">
 
-                <div class="card shadow-sm col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">                    
-                    <div class="card-body text-center">
-                        <h6 class="card-title">Student Data</h6>
+            <div class="card-deck">
+                <div class="card shadow-sm wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="card-body">
+                        <h6 class="card-title">Setup</h6>
+                        <p class="card-text">Program, Course, Topic, Instructor, Room, Student Category, Academic Term,
+                            Academic Year</p>
                     </div>
                 </div>
 
-                <div class="card shadow-sm col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">                    
-                    <div class="card-body text-center">
+                <div class="card shadow-sm wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="card-body">
+                        <h6 class="card-title">Student Information</h6>
+                        <p class="card-text">Student Details, Guardian Details, Student Log, Student Batch, Student
+                            Group</p>
+                    </div>
+                </div>
+
+                <div class="card shadow-sm wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="card-body">
                         <h6 class="card-title">Admissions Management</h6>
+                        <p class="card-text">Student Applicant, Program Enrollment, Program Enrollment Tool, Student
+                            Admission</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-deck">
+                <div class="card shadow-sm wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="card-body">
+                        <h6 class="card-title">Fees Management</h6>
+                        <p class="card-text">Fee Records, Fee Structure, Fee Category, Fee Schedule</p>
                     </div>
                 </div>
 
-                <div class="card shadow-sm col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">                    
-                    <div class="card-body text-center">
-                        <h6 class="card-title">Fees Collection</h6>
-                    </div>
-                </div>
-
-                <div class="card shadow-sm col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">                    
-                    <div class="card-body text-center">
+                <div class="card shadow-sm wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="card-body">
                         <h6 class="card-title">Attendance Management</h6>
+                        <p class="card-text">Student Attendance, Student Attendance Tool, Student Leave Application</p>
                     </div>
                 </div>
 
-                <div class="card shadow-sm col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">                    
-                    <div class="card-body text-center">
+                <div class="card shadow-sm wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="card-body">
+                        <h6 class="card-title">Online Learning Management System</h6>
+                        <p class="card-text">Publish Articles, Videos & Quizzes, Track Student Progress</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-deck">
+                <div class="card shadow-sm wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="card-body">
                         <h6 class="card-title">Assessments</h6>
+                        <p class="card-text">Assessment Criteria, Assessment Group, Assessment Plan, Grading Scale,
+                            Assessment Result</p>
                     </div>
                 </div>
 
-                <div class="card shadow-sm col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">                    
-                    <div class="card-body text-center">
-                        <h6 class="card-title">Employee Payroll</h6>
+                <div class="card shadow-sm wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="card-body">
+                        <h6 class="card-title">Schedule/Time Table</h6>
+                        <p class="card-text">Course Schedule, Course Schedule Tool, Calendar View</p>
                     </div>
                 </div>
-            </div-->
+
+                <div class="card shadow-sm wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="card-body">
+                        <h6 class="card-title">Core Modules</h6>
+                        <p class="card-text">Accounts, Stock, Human Resources, Employee Payroll, Asset Management,
+                            Vendor Management, CRM & many more
+                        </p>
+                    </div>
+                </div>
+            </div>
 
         </div>
     </section><!-- #terms -->
+
+    <!--==========================
+      Call To Action Section
+    ============================-->
+    {% include "templates/includes/sections/call_to_action.html" %}
 
 </main>
 {% endblock %}
