--- a/website_4cs/www/fleet.html
+++ b/website_4cs/www/fleet.html
@@ -4,34 +4,12 @@
 {% block carousel %}{% endblock %}
 
 {% block style_4cs %}
-<link type="text/css" rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700">
-<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/bootstrap.min.css">
-<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/font-awesome.min.css">
-<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/animate.min.css">
-<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/ionicons.min.css">
-<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/owl.carousel.min.css">
-<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/lightbox.min.css">
-<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/style.css">
-<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/custom.css">
+{% include "/templates/includes/css.html" %}
+<link type="text/css" rel="stylesheet" href="assets/website_4cs/css/4cs_style.css">
 {% endblock %}
 
 {% block script_4cs %}
-<script type="text/javascript" src="/assets/website_4cs/js/jquery.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/jquery-migrate.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/bootstrap.bundle.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/easing.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/hoverIntent.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/superfish.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/wow.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/waypoints.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/counterup.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/owl.carousel.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/isotope.pkgd.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/lightbox.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/jquery.touchSwipe.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/contactform.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/main.js"></script>
+{% include "/templates/includes/scripts.html" %}
 {% endblock %}
 
 {% block content %}
@@ -41,11 +19,92 @@
 
             <header class="section-header">
                 <h3>Fleet Management</h3>
+                <p>Technological adoption for vehicle tracking is a must for businesses that rely on transport.</p>
             </header>
 
-            <p>Under Construction</p>
+            <p class="text-center">
+                <b>4C Solutions</b> provides innovative and cost effective GPS Tracking System (GTS) for real-time
+                geo-location of your
+                fleet. It provides native android mobile application for tracking your fleet on the go to enhance
+                efficiency and productivity.
+                Our Fleet management solution creates significant value for any organisation that relies on transport by
+                providing multiple
+                kinds of alerts and reports.
+            </p>
+            <p class="font-weight-bold font-italic text-warning">Note: Some features are dependent on Sensors & GPS
+                Device Capabilities.
+            </p>
+            <div class="card-deck">
+                <div class="card shadow-sm wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="card-body">
+                        <h6 class="card-title">Vehicle Tracking</h6>
+                        <p class="card-text">Live Location, Location History, Remote Power Cut-Off, Total Distance,
+                            Maximum Speed, Average Speed, Engine Hours
+                        </p>
+                    </div>
+                </div>
+
+                <div class="card shadow-sm wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="card-body">
+                        <h6 class="card-title">Events and Notifications</h6>
+                        <p class="card-text">Mobile, SMS and Email Notifications for Alarms, Vehicle Motion, Ignition
+                            On/Off, Speed Limit Exceeded, Maintenance Alerts, Vehicle Status (Online/ Offline/ Unknown)
+                        </p>
+                    </div>
+                </div>
+
+                <div class="card shadow-sm wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="card-body">
+                        <h6 class="card-title">Reports</h6>
+                        <p class="card-text">Trip Reports, Summary Reports, Event Reports, Activity/Route Report, Stops
+                            Report
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-deck">
+                <div class="card shadow-sm wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="card-body">
+                        <h6 class="card-title">Driver Behaviour</h6>
+                        <p class="card-text">Driver & Vehicle Association, Hard Braking, Hard Acceleration, Hard
+                            Cornering, High RPM, Lane Change, Over speeding
+                        </p>
+                    </div>
+                </div>
+
+                <div class="card shadow-sm wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="card-body">
+                        <h6 class="card-title">Alarms</h6>
+                        <p class="card-text">SOS, Vibration, Movement, Lowspeed, Overspeed, Geo-Fence Enter/Exit,
+                            Accident, Tow, Idle, Low Battery, Power Cut & Restored, Door Status
+                        </p>
+                    </div>
+                </div>
+
+                <div class="card shadow-sm wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="card-body">
+                        <h6 class="card-title">Vehicle Maintenance</h6>
+                        <p class="card-text">Maintenance alerts based on Total Distance, Engine Hours</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <br><br>
+            <p class="font-weight-bolder text-grey">Demo video showing major features on Android device</p>
+
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/mzScYZ1sNgg" frameborder="0" allow="accelerometer; 
+            autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </section><!-- #terms -->
+
+    <!--==========================
+      Call To Action Section
+    ============================-->
+
+    {% include "templates/includes/sections/call_to_action.html" %}
 
 </main>
 {% endblock %}
