--- a/website_4cs/www/healthcare.html
+++ b/website_4cs/www/healthcare.html
@@ -4,34 +4,12 @@
 {% block carousel %}{% endblock %}
 
 {% block style_4cs %}
-<link type="text/css" rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700">
-<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/bootstrap.min.css">
-<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/font-awesome.min.css">
-<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/animate.min.css">
-<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/ionicons.min.css">
-<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/owl.carousel.min.css">
-<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/lightbox.min.css">
-<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/style.css">
-<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/custom.css">
+{% include "/templates/includes/css.html" %}
+<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/4cs_style.css">
 {% endblock %}
 
 {% block script_4cs %}
-<script type="text/javascript" src="/assets/website_4cs/js/jquery.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/jquery-migrate.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/bootstrap.bundle.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/easing.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/hoverIntent.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/superfish.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/wow.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/waypoints.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/counterup.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/owl.carousel.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/isotope.pkgd.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/lightbox.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/jquery.touchSwipe.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/contactform.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/main.js"></script>
+{% include "/templates/includes/scripts.html" %}
 {% endblock %}
 
 {% block content %}
@@ -41,11 +19,116 @@
 
             <header class="section-header">
                 <h3>ERP for Healthcare</h3>
+                <p>ERP in Healthcare is positioned for accelerated growth among hospitals through enhanced operational
+                    efficiency & reduced operational costs.
+                </p>
             </header>
 
-            <p>Under Construction</p>
+            <p class="text-center">
+                <b>4C Solutions</b> provides innovative and cost effective ERP (Enterprise Resource Planning) services
+                for the health care organizations like <b>Hospitals & Diagnostic Laboratories</b>, which seeks to
+                maximise efficiency and productivity.
+                The real-time data will help in better patient management, patient billing, diagnostic laboratory
+                management etc.
+                We intend our customers to concentrate on their core competency: <b>Providing patients with the right
+                    care at the right time</b>.
+                Our comprehensive portfolio of solutions creates significant value for Health care organizations.
+            </p>
+
+            <div class="card-deck">
+                <div class="card shadow-sm wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="card-body">
+                        <h6 class="card-title">OPD Management</h6>
+                        <p class="card-text">Patient Registration, Appointment Booking, Consultation, Vital Signs,
+                            Complaints & Diagnosis, Fee Validity
+                        </p>
+                    </div>
+                </div>
+
+                <div class="card shadow-sm wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="card-body">
+                        <h6 class="card-title">IPD Management</h6>
+                        <p class="card-text">Patient Billing, Patient ADT(Admission, Transfer, Discharge), Clinical
+                            Procedure, Discharge Summary, Wards Occupancy Status, Vital Signs, IPD Consultation
+                        </p>
+                    </div>
+                </div>
+
+                <div class="card shadow-sm wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="card-body">
+                        <h6 class="card-title">Hospital/Clinic Management</h6>
+                        <p class="card-text">Staff, Medical Departments, Healthcare Service Units (Wards & Beds, ICU, OT
+                            etc.), Healthcare Service Unit Charges
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-deck">
+                <div class="card shadow-sm wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="card-body">
+                        <h6 class="card-title">Patient Management</h6>
+                        <p class="card-text">Patient Details, Medical History, Risk Factors, Patient's Relations with
+                            existing patients
+                        </p>
+                    </div>
+                </div>
+
+                <div class="card shadow-sm wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="card-body">
+                        <h6 class="card-title">Healthcare Practitioner</h6>
+                        <p class="card-text">Practitioner Details, Practitioner Schedule & Availability, Practitioner
+                            Charges, Referring Physicians
+                        </p>
+                    </div>
+                </div>
+
+                <div class="card shadow-sm wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="card-body">
+                        <h6 class="card-title">Medical Coding Standards</h6>
+                        <p class="card-text">We support medical coding standards like International Classification of
+                            Diseases (ICD-10) to code & classify Diseases, Signs & Symptoms
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-deck">
+                <div class="card shadow-sm wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="card-body">
+                        <h6 class="card-title">Pharmacy</h6>
+                        <p class="card-text">Supplier Management, Inventory Management, Batch Number & Expiry Dates,
+                            Point of Sales, Multiple POS Profiles, GST Compliance
+                        </p>
+                    </div>
+                </div>
+
+                <div class="card shadow-sm wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="card-body">
+                        <h6 class="card-title">Laboratory Management</h6>
+                        <p class="card-text">Managed Sample Collection, Lab Tests, Lab Reports, Antibiotic &
+                            Sensitivity, SMS & Email Notifications
+                        </p>
+                    </div>
+                </div>
+
+                <div class="card shadow-sm wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="card-body">
+                        <h6 class="card-title">Core Modules</h6>
+                        <p class="card-text">Accounts, Stock, Human Resources, Employee Payroll, Asset Management,
+                            Vendor Management, CRM & many more
+                        </p>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </section><!-- #terms -->
+
+    <!--==========================
+      Call To Action Section
+    ============================-->
+    {% include "templates/includes/sections/call_to_action.html" %}
 
 </main>
 {% endblock %}
