--- a/website_4cs/www/index.html
+++ b/website_4cs/www/index.html
@@ -6,33 +6,11 @@
 {% endblock %}
 
 {% block style_4cs %}
-<link type="text/css" rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700">
-<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/bootstrap.min.css">
-<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/font-awesome.min.css">
-<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/animate.min.css">
-<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/ionicons.min.css">
-<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/owl.carousel.min.css">
-<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/lightbox.min.css">
-<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/style.css">
+{% include "/templates/includes/css.html" %}
 {% endblock %}
 
 {% block script_4cs %}
-<script type="text/javascript" src="/assets/website_4cs/js/jquery.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/jquery-migrate.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/bootstrap.bundle.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/easing.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/hoverIntent.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/superfish.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/wow.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/waypoints.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/counterup.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/owl.carousel.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/isotope.pkgd.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/lightbox.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/jquery.touchSwipe.min.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/contactform.js"></script>
-<script type="text/javascript" src="/assets/website_4cs/js/main.js"></script>
+{% include "/templates/includes/scripts.html" %}
 {% endblock %}
 
 {% block content %}
@@ -60,9 +38,12 @@
                             <div class="icon"><i class="ion-arrow-graph-up-right"></i></div>
                         </div>
                         <h2 class="title">Our Mission</h2>
-                        <p> To provide the most comprehensive, high performance, high quality, cost effective, easy to use ERP solutions and 
-                            business support services to our customers. Our solutions enable & empower our customers to focus on their 
-                            core competencies by reducing thier efforts in accordance to the Pareto Principle(80/20 rule).</p>
+                        <p> To provide the most comprehensive, high performance, high quality, cost effective, easy to
+                            use ERP solutions and
+                            business support services to our customers. Our solutions enable & empower our customers to
+                            focus on their
+                            core competencies by reducing thier efforts in accordance to the Pareto Principle(80/20
+                            rule).</p>
                     </div>
                 </div>
 
@@ -73,9 +54,12 @@
                             <div class="icon"><i class="ion-ios-eye-outline"></i></div>
                         </div>
                         <h2 class="title">Our Vision</h2>
-                        <p> The <b>MSME</b> (Micro, Small and Medium Enterprises) sector plays a vital role in any country’s socio-economic 
-                            transformation and in meeting the objectives of employment generation and reducing urbanization.
-                            <b>4C Solutions</b> wants to support MSMEs in becoming high performing organizations and in turn be part of 
+                        <p> The <b>MSME</b> (Micro, Small and Medium Enterprises) sector plays a vital role in any
+                            country’s socio-economic
+                            transformation and in meeting the objectives of employment generation and reducing
+                            urbanization.
+                            <b>4C Solutions</b> wants to support MSMEs in becoming high performing organizations and in
+                            turn be part of
                             the transformation they bring.
                         </p>
                     </div>
@@ -95,7 +79,8 @@
             <header class="section-header wow fadeInUp">
                 <h3>Services</h3>
                 <p>
-                    4C Solutions is committed to improve operational performance with open source consulting and implementation services across industries.
+                    4C Solutions is committed to improve operational performance with open source consulting and
+                    implementation services across industries.
                 </p>
             </header>
 
@@ -122,7 +107,7 @@
 
             </div>
 
-            <div class="row">
+            <!--div class="row">
 
                 <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
                     <div class="icon"><i class="ion-android-globe"></i></div>
@@ -130,7 +115,7 @@
                     <p class="description">Project and Task Management, Time Tracking, Project Costing & Billing, Project Reports etc.</p>
                 </div>
 
-            </div>
+            </div-->
 
         </div>
     </section><!-- #services -->
@@ -138,14 +123,7 @@
     <!--==========================
       Call To Action Section
     ============================-->
-    <section id="call-to-action" class="wow fadeIn">
-        <div class="container text-center">
-            <h3>Call To Action</h3>
-            <p> Please get in touch with us to discuss your requirements. We provide customised solution to suit your
-                buisness needs.</p>
-            <a class="cta-btn" href="#contact">Contact for Demo Site</a>
-        </div>
-    </section><!-- #call-to-action -->
+    {% include "templates/includes/sections/call_to_action.html" %}
 
     <!--==========================
       Clients Section
@@ -208,7 +186,7 @@
 
             <div class="section-header">
                 <h3>Contact Us</h3>
-                <p>Reach out for a <b>FREE</b> cloud instance to try our ERP Education and ERP Healthcare services.</p>
+                <p>Reach out for a <b>FREE</b> cloud instance to try our ERP Software Services.</p>
             </div>
 
             <div class="row contact-info">
