--- a/website_4cs/www/services.html
+++ b/website_4cs/www/services.html
@@ -47,5 +47,17 @@
         </div>
     </section><!-- #terms -->
 
+    <!--==========================
+      Call To Action Section
+    ============================-->
+    <section id="call-to-action" class="wow fadeIn">
+        <div class="container text-center">
+            <h3>Call To Action</h3>
+            <p class="text-center"> Please get in touch with us to discuss your requirements. We provide customised solution to suit your
+                buisness needs.</p>
+            <a class="cta-btn" href="/#contact">Contact for Demo Site</a>
+        </div>
+    </section><!-- #call-to-action -->
+
 </main>
 {% endblock %}
