Intro: Removed carousel & added text-slider with particles
Signed-off-by: Syed Mujeer Hashmi <mujeerhashmi@4csolutions.in>

--- a/website_4cs/www/index.html
+++ b/website_4cs/www/index.html
@@ -1,8 +1,8 @@
 {% extends "templates/master.html" %}
 {% block title %}4C Solutions{% endblock %}
 
-{% block carousel %}
-{%- include "templates/includes/carousel/carousel.html" -%}
+{% block intro %}
+{%- include "templates/includes/intro/intro.html" -%}
 {% endblock %}
 
 {% block style_4cs %}
