--- a/website_4cs/www/index.html
+++ b/website_4cs/www/index.html
@@ -87,19 +87,19 @@
 
                 <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
                     <div class="icon"><i class="ion-ios-paper-outline"></i></div>
-                    <h4 class="title"><a href="/education.html">ERP for Education</a></h4>
+                    <h4 class="title"><a href="/education">ERP for Education</a></h4>
                     <p class="description">Student Data, Admission Management, Attendance, Fee Management, Accounting &
                         Payroll etc.</p>
                 </div>
                 <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
                     <div class="icon"><i class="ion-ios-pulse"></i></div>
-                    <h4 class="title"><a href="/healthcare.html">ERP for Healthcare</a></h4>
+                    <h4 class="title"><a href="/healthcare">ERP for Healthcare</a></h4>
                     <p class="description">Patient Data, Appointments, Lab Tests, Pharmacy, Accounting & Patient Billing
                         etc.</p>
                 </div>
                 <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
                     <div class="icon"><i class="ion-ios-location-outline"></i></div>
-                    <h4 class="title"><a href="/fleet.html">Fleet Management</a></h4>
+                    <h4 class="title"><a href="/fleet">Fleet Management</a></h4>
                     <p class="description">Live Tracking, Location History, Trip Chart and Summary Reports, Email and
                         SMS Alerts etc.</p>
                 </div>
